--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,14 @@ jdk:
 
 before_script:
   - mongod --version
+  - |-
+    echo "replication:
+      replSetName: rs0" | sudo tee -a /etc/mongod.conf
+  - sudo service mongod restart
+  - sleep 20
+  - |-
+    mongo --eval "rs.initiate({_id: 'rs0', members:[{_id: 0, host: '127.0.0.1:27017'}]});"
+  - sleep 15
 
 services:
   - mongodb
