--- a/spring-data-mongodb-cross-store/pom.xml
+++ b/spring-data-mongodb-cross-store/pom.xml
@@ -17,6 +17,7 @@
 		<jpa>2.1.1</jpa>
 		<hibernate>5.2.1.Final</hibernate>
 		<java-module-name>spring.data.mongodb.cross.store</java-module-name>
+		<project.root>${basedir}/..</project.root>
 	</properties>
 
 	<dependencies>
