DATAMONGO-1901 - Added project.root configuration to make JavaDoc generation work again.
Related ticket: https://github.com/spring-projects/spring-data-build/issues/527.

--- a/spring-data-mongodb-cross-store/pom.xml
+++ b/spring-data-mongodb-cross-store/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<jpa>2.0.0</jpa>
 		<hibernate>3.6.10.Final</hibernate>
+		<project.root>${basedir}/..</project.root>
 	</properties>
 
 	<dependencies>
