--- a/spring-data-mongodb/pom.xml
+++ b/spring-data-mongodb/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<objenesis>1.3</objenesis>
 		<equalsverifier>1.5</equalsverifier>
+		<project.root>${basedir}/..</project.root>
 	</properties>
 
 	<dependencies>
