DATAMONGO-2184 - Introduce Concourse.

--- a/spring-data-mongodb-benchmarks/pom.xml
+++ b/spring-data-mongodb-benchmarks/pom.xml
@@ -87,6 +87,7 @@
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
 					<testSourceDirectory>${project.build.sourceDirectory}</testSourceDirectory>
 					<testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
 					<excludes>
