Prepare Spring Data MongoDB 4.x branch.
Upgrade to data-commons 3.0 and Java 17 (still source level 16 due to asm).
Remove support for threeten, joda-time.
Transition to PersistentEntitiesFactoryBean from data-commons.
Update build to MongoDB 4.4 and 5 with Java17. Remove Java8 setup.
Fix javadoc tooling error on cdi 1 vs. 2 version mix.
Disabled internal package cycle analysis as this requires transition to ArchUnit.

--- a/ci/pipeline.properties
+++ b/ci/pipeline.properties
@@ -1,6 +1,6 @@
 # Java versions
-java.main.tag=8u312-b07-jdk
-java.next.tag=11.0.13_8-jdk
+java.main.tag=17.0.1_12-jdk
+java.next.tag=17.0.1_12-jdk
 java.lts.tag=17.0.1_12-jdk
 
 # Docker container images - standard
