--- a/spring-data-mongodb-distribution/pom.xml
+++ b/spring-data-mongodb-distribution/pom.xml
@@ -23,7 +23,7 @@
 		<dist.key>SDMONGO</dist.key>
 
 		<!-- Observability -->
-		<micrometer-docs-generator.version>1.0.0-SNAPSHOT</micrometer-docs-generator.version>
+		<micrometer-docs-generator.version>1.0.0-M1</micrometer-docs-generator.version>
 		<micrometer-docs-generator.inputPath>${maven.multiModuleProjectDirectory}/spring-data-mongodb/</micrometer-docs-generator.inputPath>
 		<micrometer-docs-generator.inclusionPattern>.*</micrometer-docs-generator.inclusionPattern>
 		<micrometer-docs-generator.outputPath>${maven.multiModuleProjectDirectory}/target/</micrometer-docs-generator.outputPath>
