Add AOT repository support
We now use the AOT infrastructure of Spring Framework 6 and data commons to provide AOT support building the foundation for native image compilation.
Additionally we register hints for GraalVM native image.

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<mongo>4.6.1</mongo>
 		<mongo.reactivestreams>${mongo}</mongo.reactivestreams>
 		<jmh.version>1.19</jmh.version>
+		<spring>6.0.0-SNAPSHOT</spring>
 	</properties>
 
 	<developers>
