--- a/spring-data-mongodb-distribution/pom.xml
+++ b/spring-data-mongodb-distribution/pom.xml
@@ -40,50 +40,30 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>generate-metrics-metadata</id>
-						<phase>prepare-package</phase>
+						<id>generate-docs</id>
+						<phase>generate-resources</phase>
 						<goals>
 							<goal>java</goal>
 						</goals>
 						<configuration>
-							<mainClass>io.micrometer.docs.metrics.DocsFromSources
-							</mainClass>
-						</configuration>
-					</execution>
-					<execution>
-						<id>generate-tracing-metadata</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>java</goal>
-						</goals>
-						<configuration>
-							<mainClass>io.micrometer.docs.spans.DocsFromSources
-							</mainClass>
+							<mainClass>io.micrometer.docs.DocsGeneratorCommand</mainClass>
+							<includePluginDependencies>true</includePluginDependencies>
+							<arguments>
+								<argument>${micrometer-docs-generator.inputPath}</argument>
+								<argument>${micrometer-docs-generator.inclusionPattern}</argument>
+								<argument>${micrometer-docs-generator.outputPath}</argument>
+							</arguments>
 						</configuration>
 					</execution>
 				</executions>
 				<dependencies>
 					<dependency>
 						<groupId>io.micrometer</groupId>
-						<artifactId>micrometer-docs-generator-spans</artifactId>
-						<version>${micrometer-docs-generator}</version>
-						<type>jar</type>
-					</dependency>
-					<dependency>
-						<groupId>io.micrometer</groupId>
-						<artifactId>micrometer-docs-generator-metrics</artifactId>
+						<artifactId>micrometer-docs-generator</artifactId>
 						<version>${micrometer-docs-generator}</version>
 						<type>jar</type>
 					</dependency>
 				</dependencies>
-				<configuration>
-					<includePluginDependencies>true</includePluginDependencies>
-					<arguments>
-						<argument>${micrometer-docs-generator.inputPath}</argument>
-						<argument>${micrometer-docs-generator.inclusionPattern}</argument>
-						<argument>${micrometer-docs-generator.outputPath}</argument>
-					</arguments>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
