Upgrade to Java 8u345-b01-jdk-focal and pin base image distribution.
See #4208

--- a/ci/pipeline.properties
+++ b/ci/pipeline.properties
@@ -1,7 +1,7 @@
 # Java versions
-java.main.tag=8u322-b06-jdk
-java.next.tag=11.0.14.1_1-jdk
-java.lts.tag=17.0.2_8-jdk
+java.main.tag=8u345-b01-jdk-focal
+java.next.tag=11.0.16.1_1-jdk-focal
+java.lts.tag=17.0.4.1_1-jdk-focal
 
 # Docker container images - standard
 docker.java.main.image=harbor-repo.vmware.com/dockerhub-proxy-cache/library/eclipse-temurin:${java.main.tag}
