--- a/ci/openjdk8-mongodb-4.0/Dockerfile
+++ b/ci/openjdk8-mongodb-4.0/Dockerfile
@@ -6,9 +6,10 @@ ARG MONGODB
 ENV TZ=Etc/UTC
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN RUN set -eux; \
+RUN set -eux; \
 	sed -i -e 's/archive.ubuntu.com/mirror.one.com/g' /etc/apt/sources.list && \
 	sed -i -e 's/security.ubuntu.com/mirror.one.com/g' /etc/apt/sources.list && \
+	sed -i -e 's/ports.ubuntu.com/mirrors.ocf.berkeley.edu/g' /etc/apt/sources.list && \
 	sed -i -e 's/http/https/g' /etc/apt/sources.list && \
 	apt-get update && apt-get install -y apt-transport-https apt-utils gnupg2 && \
 	apt-key adv --keyserver hkps://keyserver.ubuntu.com:443 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4 && \
